src/middleware/http/auth/jwt/snapshots/roadster__middleware__http__auth__jwt__tests__jwt_csrf_from_request_parts@jwt_csrf_from_request_parts.snap
---
source: src/middleware/http/auth/jwt/mod.rs
expression: jwt
---
{
  "token": {
    "header": {
      "typ": "JWT",
      "alg": "HS256"
    },
    "claims": {
      "iss": null,
      "sub": "[uuid]",
      "exp": 1234,
      "nbf": null,
      "iat": null,
      "jti": null
    }
  },
  "csrf_status": "Safe"
}
