src/middleware/http/auth/jwt/snapshots/roadster__middleware__http__auth__jwt__tests__subject_from_uri.snap
---
source: src/middleware/http/auth/jwt/mod.rs
expression: subject
---
Uri(
    Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "example.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
)
